2021-08-05: v0.8.1
  Update: 
    jwt-go to the current version. Fix the code to support the new jwt-go.


2021-06-21: v0.8.0
  New Features:
    Generate additional Slave SRV records if DiscoveryInfo port name is specified
    
2019-05-10: v0.7.0
  New Features:
    IPv6 is now supported.
    TLS supports client-side cert + keypair.
    Zone-specific resolvers.

  Enhancements:
    dns: truncate bit is configurable.
    dns: non-zero weight for returned SRV records.
    mesos: poll /state instead of /state.json.
    logs: updated logging regarding new masters.
    logs: added error message when no masters discovered.
    Bump underlying libraries to pick up fixes (DNS, HTTP API).

  Fixes:
    api/dns: wait for a reload before serving DNS and HTTP.
    api: specify valid Accept content types.
    dns: properly report SOA mname (instead of rname).
    docs: document the `enumerate` endpoint.
    docs: correct URL in contrib/ansible-gce/README.md.
    docs: clean up formatting, typos and so on.

2016-09-14: v0.6.0
  Added some benchmarks for RecordGenerator.insertRR
  Make minor fixes to enumeration API, where it would return null, as
    as opposed to an empty list
  Add the AXFR (record listing) HTTP API endpoint
  Make HTTP listener address configurable
  General improvements to the HTTP client
    -Pool HTTP connections, preventing connection leakage
    -Set the User Agent
  Switch the project to Go Vendor as opposed to Godeps
  Add HTTPS Client support to Mesos-DNS (for state.json)
  Add Mesos authentication support
  Fix tasks from more than 63 dashes and a non - character from
    crashing Mesos-DNS
  Don't treat truncated records as an error.

2016-03-04: v0.5.2
  Add EnforceRFC952 to sample config
  Improve performance of record generation
  Fix bug in DiscoveryInfo to use the same scheme for record creation
    as normal records (#377)
  Add enumeration API (#402)
  Generate additional SRV records if DiscoveryInfo port name is specified
