@@ -1,97 +1,0 @@
-{
-	"ImportPath": "github.com/AVENTER-UG/mesos-dns",
-	"GoVersion": "go1.6",
-	"GodepVersion": "v74",
-	"Packages": [
-		"./..."
-	],
-	"Deps": [
-		{
-			"ImportPath": "github.com/dgrijalva/jwt-go",
-			"Comment": "v2.6.0-5-g40bd0f3",
-			"Rev": "40bd0f3b4891a9d7f121bfb7b8e8b0525625e262"
-		},
-		{
-			"ImportPath": "github.com/emicklei/go-restful",
-			"Comment": "v1.1.3-101-g892402b",
-			"Rev": "892402ba11a2e2fd5e1295dd633481f27365f14d"
-		},
-		{
-			"ImportPath": "github.com/emicklei/go-restful/log",
-			"Comment": "v1.1.3-101-g892402b",
-			"Rev": "892402ba11a2e2fd5e1295dd633481f27365f14d"
-		},
-		{
-			"ImportPath": "github.com/gogo/protobuf/proto",
-			"Comment": "v0.1-52-g43ab7f0",
-			"Rev": "43ab7f0ec7b6d072e0368bd537ffefe74ed30198"
-		},
-		{
-			"ImportPath": "github.com/golang/glog",
-			"Rev": "fca8c8854093a154ff1eb580aae10276ad6b1b5f"
-		},
-		{
-			"ImportPath": "github.com/kylelemons/godebug/diff",
-			"Rev": "21cb3784d9bda523911b96719efba02b7e983256"
-		},
-		{
-			"ImportPath": "github.com/kylelemons/godebug/pretty",
-			"Rev": "21cb3784d9bda523911b96719efba02b7e983256"
-		},
-		{
-			"ImportPath": "github.com/mesos/mesos-go/detector",
-			"Comment": "v0.0.2-1-g068d547",
-			"Rev": "068d5470506e3780189fe607af40892814197c5e"
-		},
-		{
-			"ImportPath": "github.com/mesos/mesos-go/detector/zoo",
-			"Comment": "v0.0.2-1-g068d547",
-			"Rev": "068d5470506e3780189fe607af40892814197c5e"
-		},
-		{
-			"ImportPath": "github.com/mesos/mesos-go/mesosproto",
-			"Comment": "v0.0.2-1-g068d547",
-			"Rev": "068d5470506e3780189fe607af40892814197c5e"
-		},
-		{
-			"ImportPath": "github.com/mesos/mesos-go/mesosutil",
-			"Comment": "v0.0.2-1-g068d547",
-			"Rev": "068d5470506e3780189fe607af40892814197c5e"
-		},
-		{
-			"ImportPath": "github.com/mesos/mesos-go/upid",
-			"Comment": "v0.0.2-1-g068d547",
-			"Rev": "068d5470506e3780189fe607af40892814197c5e"
-		},
-		{
-			"ImportPath": "github.com/miekg/dns",
-			"Rev": "db96a2b759cdef4f11a34506a42eb8d1290c598e"
-		},
-		{
-			"ImportPath": "github.com/samuel/go-zookeeper/zk",
-			"Rev": "177002e16a0061912f02377e2dd8951a8b3551bc"
-		},
-		{
-			"ImportPath": "github.com/stretchr/objx",
-			"Rev": "cbeaeb16a013161a98496fad62933b1d21786672"
-		},
-		{
-			"ImportPath": "github.com/stretchr/testify/assert",
-			"Comment": "v1.0-42-gb8dc1ce",
-			"Rev": "b8dc1cecf15bdaf1988d9e87aa7cd98d899a06d6"
-		},
-		{
-			"ImportPath": "github.com/stretchr/testify/mock",
-			"Comment": "v1.0-42-gb8dc1ce",
-			"Rev": "b8dc1cecf15bdaf1988d9e87aa7cd98d899a06d6"
-		},
-		{
-			"ImportPath": "github.com/tv42/zbase32",
-			"Rev": "03389da7e0bf9844767f82690f4d68fc097a1306"
-		},
-		{
-			"ImportPath": "golang.org/x/net/context",
-			"Rev": "db8e4de5b2d6653f66aea53094624468caad15d2"
-		}
-	]
-}
